fixed scroll overloy to not have gap, added loading animation

--- a/src/css/base.css
+++ b/src/css/base.css
@@ -16,5 +16,5 @@ p {
 }
 
 h1 {
-    margin: 0
+    margin: 0;
 }
